# asi

./: README.md  pyproject.toml  train_model.py
app/: model.joblib  model_meta.json
mlruns/0/: meta.yaml
mlruns/733789873067468938/: meta.yaml
mlruns/733789873067468938/1ac105c3d70f4d3e8913a9d686060cd3/: meta.yaml
mlruns/733789873067468938/1ac105c3d70f4d3e8913a9d686060cd3/metrics/: accuracy  f1_macro  precision  recall  roc_auc
mlruns/733789873067468938/32cdcc632c734bbdbb709ae3559effed/: meta.yaml
mlruns/733789873067468938/32cdcc632c734bbdbb709ae3559effed/metrics/: accuracy  f1_macro  precision  recall  roc_auc
mlruns/733789873067468938/448b38b7e30346ad9a74ff139430cf03/: meta.yaml
mlruns/733789873067468938/448b38b7e30346ad9a74ff139430cf03/metrics/: accuracy  f1_macro  precision  recall  roc_auc
mlruns/733789873067468938/c77daef9d74b4219af6629c9e5bbe163/: meta.yaml
mlruns/733789873067468938/c77daef9d74b4219af6629c9e5bbe163/metrics/: accuracy  f1_macro  precision  recall  roc_auc
mlruns/733789873067468938/cfccf072d3134ffa887d3badb4fa5707/: meta.yaml
mlruns/733789873067468938/cfccf072d3134ffa887d3badb4fa5707/tags/: mlflow.runName
mlruns/733789873067468938/models/m-33a9055d4f8f4a84852f3336b170ee78/: meta.yaml
mlruns/733789873067468938/models/m-4ed05bd9089941db8aad88ba36d928fc/: meta.yaml
mlruns/733789873067468938/models/m-70961ab4bf4f4002ab3b700e8ec92d6a/: meta.yaml
mlruns/733789873067468938/models/m-d7384216c42941de8f979808e759c66d/: meta.yaml
mlruns/models/IrisModel/: meta.yaml
mlruns/models/IrisModel/version-1/: meta.yaml
(+40 files in other folders)
